--- a/css/css.css
+++ b/css/css.css
@@ -40,6 +40,11 @@ footer {
     box-sizing: border-box;
 }
 
+#titulo {
+    color: white;
+    text-align: center;
+}
+
 .rodizio {
     background-color: #6690cf;
     margin: left 500px;
@@ -66,7 +71,184 @@ footer {
     left: 1300px;
 }
 
-#titulo {
+.endereco {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: 350px;
+    height: 300px;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 950px;
+    left: 250px;
+}
+
+.contato {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: 350px;
+    height: 500px;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 950px;
+    left: 1300px;
+}
+
+.form {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 1350px;
+    left: 350px;
+}
+
+.wpp {
+    width: 2em;
+    height: 2em;
+    vertical-align: middle;
+    top: 10px;
+    left: 10px;
+}
+
+#sobre {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 550px;
+    left: 100px;
+    font-size: 30px;
+}
+
+.salao {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    opacity: 0.8;
+}
+
+.combinados {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 550px;
+    left: 200px;
+}
+
+.entradas {
+    background-color: #6690cf;
+    margin: left 800px;
+    padding: 20px;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 550px;
+    left: 1200px;
+}   
+
+.pratos {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 950px;
+    left: 350px;
+}   
+
+.rolls {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 950px;
+    left: 900px;
+}   
+
+.pratosquentes {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 950px;
+    left: 1350px;
+}       
+
+.extras {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 1350px;
+    left: 380px;
+}   
+
+.bebidas {
+    background-color: #6690cf;
+    margin: left 500px;
+    padding: 20px;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 4px solid black;
+    position: absolute;
+    top: 1350px;
+    left: 1150px;
+}       
+
+.botao {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 15px;
+    font-size: 16px;
+    background-color: #6690cf;
     color: white;
-    text-align: center;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#meio {
+    height: 400px;
+    vertical-align: middle;
+    top: 550px;
+    position: absolute;
+    left: 450px;
+    opacity: 0.5;
 }
