--- a/css/css.css
+++ b/css/css.css
@@ -142,7 +142,7 @@ footer {
 
 .combinados {
     background-color: #6690cf;
-    margin: left 500px;
+    margin-left: 500px;
     padding: 20px;
     width: auto;
     height: auto;
@@ -151,6 +151,7 @@ footer {
     position: absolute;
     top: 550px;
     left: 200px;
+    z-index: 10;
 }
 
 .entradas {
