--- a/css/stylo.css
+++ b/css/stylo.css
@@ -138,6 +138,7 @@ footer {
     display: block;
     margin: 0 auto;
     opacity: 0.8;
+    background-size: cover;
 }
 
 .combinados {
@@ -150,8 +151,8 @@ footer {
     border: 4px solid black;
     position: absolute;
     top: 550px;
-    left: 200px;
-    z-index: 10;
+    left: -250px;
+    z-index: 1;
 }
 
 .entradas {
