--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -18,10 +18,11 @@ p, h1, h2, h3 {
 
 @media (max-width: 768px) {
 
-    .salao {
-        width: 100%;
-        height: auto;
-    }
+   .salao {
+    width: 100%;
+    height: auto;
+    display: block;
+}
 
     .logo {
         width: 120px;
@@ -63,3 +64,6 @@ p, h1, h2, h3 {
         font-size: 16px;
     }
 }
+
+
+
