--- a/css/stylo.css
+++ b/css/stylo.css
@@ -1,256 +1,139 @@
-header {
-    background-color: #6690cf;
-    color: white;
-    padding: 10px 0;
-    box-sizing: border-box;    
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background-color: url('img/salão.png');
-    background-size: cover;
-    background-color: rgba(0, 0, 0, 0, 5);
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    text-align: center;
     color: #333;
-}
-
-nav {
-    margin: 10px 0;
-    background-color: #f2f2f2;
-    padding: 10px 0;
-    position: sticky;
-    top: 0;
-    border-radius: 100px; 
-    box-sizing: border-box;
-}
-
-.logo {
-    height: 400px;
-    vertical-align: middle;
-}
-
-footer {
-    background-color: #6690cf;
-    color: white;
-    padding: 10px 0;
-    bottom: 0;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-#titulo {
-    color: white;
-    text-align: center;
-}
-
-.rodizio {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: 350px;
-    height: 300px;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 550px;
-    left: 250px;
-} 
-
-.horario {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: 350px;
-    height: 350px;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 550px;
-    left: 1300px;
-}
-
-.endereco {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: 350px;
-    height: 300px;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 950px;
-    left: 250px;
-}
-
-.contato {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: 350px;
-    height: 500px;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 950px;
-    left: 1300px;
-}
-
-.form {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 1350px;
-    left: 350px;
-}
-
-.wpp {
-    width: 2em;
-    height: 2em;
-    vertical-align: middle;
-    top: 10px;
-    left: 10px;
-}
-
-#sobre {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 550px;
-    left: 100px;
-    font-size: 30px;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .salao {
     width: 100%;
-    height: auto;
+    height: 100vh;
+    object-fit: cover;
     display: block;
-    margin: 0 auto;
     opacity: 0.8;
-    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
-.combinados {
+header {
     background-color: #6690cf;
-    margin-left: 500px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 550px;
-    left: -250px;
-    z-index: 1;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
 }
 
-.entradas {
-    background-color: #6690cf;
-    margin: left 800px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 550px;
-    left: 1200px;
-}   
+.logo {
+    height: 160px;
+    object-fit: contain;
+    display: block;
+    margin: auto;
+}
 
-.pratos {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 950px;
-    left: 350px;
-}   
+nav {
+    margin-top: 10px;
+    background-color: #f2f2f2;
+    padding: 8px;
+    border-radius: 100px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
-.rolls {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 950px;
-    left: 900px;
-}   
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
 
-.pratosquentes {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 950px;
-    left: 1350px;
-}       
+nav ul a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
 
-.extras {
-    background-color: #6690cf;
-    margin: left 500px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
-    border: 4px solid black;
-    position: absolute;
-    top: 1350px;
-    left: 380px;
-}   
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    padding: 40px 10px;
+}
 
-.bebidas {
+.box {
     background-color: #6690cf;
-    margin: left 500px;
     padding: 20px;
-    width: auto;
-    height: auto;
-    box-sizing: border-box;
     border: 4px solid black;
-    position: absolute;
-    top: 1350px;
-    left: 1150px;
-}       
+    border-radius: 10px;
+    margin: 15px auto;
+    width: 100%;
+    max-width: 420px;
+    color: white;
+    text-align: center;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+    gap: 20px;
+}
+
+.menu-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+    gap: 25px;
+}
+
+#titulo,
+h1, h2, h3 {
+    color: white;
+}
+
+.wpp {
+    width: 25px;
+    vertical-align: middle;
+    margin-right:  5px;
+}
 
 .botao {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    padding: 10px 15px;
-    font-size: 16px;
     background-color: #6690cf;
     color: white;
-    border: none;
+    border: 2px solid black;
     border-radius: 5px;
+    padding: 10px 15px;
     cursor: pointer;
+    font-weight: bold;
+    z-index: 1000;
 }
 
-#meio {
-    height: 400px;
-    vertical-align: middle;
-    top: 550px;
-    position: absolute;
-    left: 450px;
-    opacity: 0.5;
+footer {
+    background-color: #6690cf;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    margin-top: auto;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+}
+
+.sobre-conteudo p {
+    font-size: 1.2em;
+    line-height: 1.6;
+}
+
+.sobre-conteudo h2 {
+    font-size: 1.5em;
 }
